# download-manager

./: .env.example  Cargo.toml  README.md
demo/: demo.cast
src/: app.rs  lib.rs  main.rs
src/download/: controller.rs  worker.rs
src/events/: event.rs  handler.rs
src/ui/: mod.rs  render.rs  textarea.rs  tui.rs
